# Audio_Co_Pilot

./: CMakeLists.txt  CONFIGURAR_CLAUDE_API.md  CONFIRMAR_API_KEY.md  PROBLEMA_TRANSFER_FUNCTION.md  confirmar_api_key_claude.sh  verificar_claude_api.sh
AudioCoPilot/: .clang-format  .cursorrules  .gitignore  ANTIMASKING_FIX_SUMMARY.md  CHAT_CONTEXT_COMPLETO.md  CMakeLists.txt  CONTEXT_SUMMARY.md  README.md  STATUS_ATUAL_ANTIMASKING.md  STATUS_FINAL.md  build_simple.sh
AudioCoPilot/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  TestMainComponent.h
AudioCoPilot/Source/Core/: AudioEngine.cpp  AudioEngine.h  DebugLogger.h  DeviceManager.cpp  DeviceManager.h  RingBuffer.h
AudioCoPilot/Source/DSP/: DSPUtils.h
AudioCoPilot/Source/Modules/AntiMasking/: AntiMaskingComponent.cpp  AntiMaskingComponent.h  AntiMaskingProcessor.cpp  AntiMaskingProcessor.h  BarkAnalyzer.cpp  BarkAnalyzer.h  BarkSpectrumDisplay.cpp  BarkSpectrumDisplay.h  ChannelSelector.cpp  ChannelSelector.h  MaskingCalculator.cpp  MaskingCalculator.h  MaskingMatrixDisplay.cpp  MaskingMatrixDisplay.h  SpreadingFunction.cpp  SpreadingFunction.h
AudioCoPilot/Source/Modules/FeedbackPrediction/: DataExporter.cpp  DataExporter.h  DynamicConfig.cpp  DynamicConfig.h  FeedbackLogger.cpp  FeedbackLogger.h  FeedbackPredictionComponent.cpp  FeedbackPredictionComponent.h  FeedbackPredictionProcessor.cpp  FeedbackPredictionProcessor.h  HowlingDetector.cpp  HowlingDetector.h  PerformanceMonitor.cpp  PerformanceMonitor.h  TrafficLightComponent.cpp  TrafficLightComponent.h
AudioCoPilot/Source/Modules/TransferFunction/: TransferFunctionComponent.cpp  TransferFunctionComponent.h  TransferFunctionProcessor.cpp  TransferFunctionProcessor.h
AudioCoPilot/Source/UI/: Colours.h
AudioCoPilot/Source/UI/Components/: DeviceSelector.cpp  DeviceSelector.h  HeaderBar.cpp  HeaderBar.h  MeterBridge.cpp  MeterBridge.h  StatusBar.cpp  StatusBar.h
AudioCoPilot/Source/UI/LookAndFeel/: BrutalistLookAndFeel.cpp  BrutalistLookAndFeel.h
AudioCoPilot/Tests/: AntiMaskingIntegrationTests.cpp  AudioEngineTests.cpp  BarkAnalyzerTests.cpp  FeedbackPredictionTests.cpp  Main.cpp  MaskingCalculatorTests.cpp  RingBufferTests.cpp  TransferFunctionTests.cpp
Source/: AppLookAndFeel.h  Theme.h
Source/Core/TransferFunction/: TFProcessor.cpp  TFProcessor.h
Source/Menu/: MenuBarModel.cpp
Source/Modules/AIStageHand/: AIStageHandView.cpp
Source/Modules/AntiMasking/: AntiMaskingFrequencyGraphComponent.cpp  AntiMaskingFrequencyGraphComponent.h  AntiMaskingHeaderComponent.cpp  AntiMaskingHeaderComponent.h  AntiMaskingView.cpp  AntiMaskingViewModern.cpp  AntiMaskingViewModern.h  MaskingSourceCardComponent.cpp  MaskingSourceCardComponent.h
Source/Modules/RTA/: RTAView.cpp
Source/UI/: DeviceSelectorComponent.cpp  DeviceSelectorComponent.h  MainWindow.cpp  MainWindow.h
Source/UI/TransferFunction/: MagnitudePlotComponent.cpp  PhasePlotComponent.cpp
